--- a/frontend/src/app/components/partials/tags/tags.component.css
+++ b/frontend/src/app/components/partials/tags/tags.component.css
@@ -29,7 +29,7 @@
 
 /* Hover Effect */
 .tag:hover {
-  background-color: #007bff; /* Blue background on hover */
+  background-color:  #2c3e50;; /* Blue background on hover */
   color: white; /* White text on hover */
   transform: translateY(-2px); /* Slight lift effect */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Stronger shadow on hover */
